<resources>
    <string name="app_name">MADP-Submission</string>
    <string name="news_title">News Title</string>
    <string name="news_summary">News Summary</string>
    <string name="news_source">News Source</string>
    <string name="news_author">News Author - And Time</string>
    <string name="news_content">
        Aenean mi lacus, euismod ac libero sit amet, congue porttitor nisl. Nullam iaculis mauris tortor, in sollicitudin lectus interdum vel.\n\nNam lorem augue, molestie eget orci et, convallis ultricies felis. Vivamus ac massa magna. Proin porta in enim at egestas.\n\nCras egestas eros sit amet justo vulputate, at porttitor ante vestibulum. Curabitur eu ante sed sem tincidunt fringilla. Sed et mollis dui.\n\nMauris eget volutpat arcu. Sed molestie ultricies venenatis. Sed quis semper leo. Curabitur a orci nec lorem vestibulum varius.\n\nCurabitur ligula augue, sollicitudin et luctus eget, ultrices eget risus. Duis euismod ligula ante, fermentum elementum nisl dapibus non.\n\n</string>
    <string name="news_detail_title">This is News Detail Title that not supposed to be here. This is News Detail Title that not supposed to be here.</string>
    <string name="favorite_title">Favorite Animanga Title</string>
    <string name="favorite_rating">Favorite Animanga Rating</string>
    <string name="favorite_description">Favorite Animanga Description</string>
    <string name="animanga_title">Title:</string>
    <string name="animanga_title_value">Animanga Title Value</string>
    <string name="animanga_type">Type:</string>
    <string name="animanga_type_value">Animanga Type Value</string>
    <string name="animanga_aired">Aired:</string>
    <string name="animanga_aired_value">Animanga Aired Value</string>
    <string name="animanga_genres">Genres:</string>
    <string name="animanga_genres_value">Animanga Genres Value</string>
    <string name="animanga_rating">SCORE</string>
    <string name="animanga_rating_value">9.0</string>
    <string name="animanga_ranked">RANKED</string>
    <string name="animanga_ranked_value">#999</string>
    <string name="animanga_popularity">POPULARITY</string>
    <string name="animanga_popularity_value">#999</string>
    <string name="animanga_members">MEMBERS</string>
    <string name="animanga_members_value">99,999</string>
    <string name="animanga_characters">Characters</string>
    <string name="animanga_character_name">Character Name</string>
    <string name="animanga_synopsis">Synopsis</string>

</resources>
