<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AnimangaDetailActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rl_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="150dp"
            android:layout_height="200dp"
            tools:src="@color/colorAccent"/>

        <TextView
            style="@style/TvFavoriteSideTitle"
            android:id="@+id/tv_animanga_title_text"
            android:text="@string/animanga_title"/>

        <TextView
            style="@style/TvFavoriteSideValue"
            android:id="@+id/tv_animanga_title_value"
            android:layout_below="@+id/tv_animanga_title_text"
            android:text="@string/animanga_title_value"/>

        <TextView
            style="@style/TvFavoriteSideTitle"
            android:id="@+id/tv_animanga_type_text"
            android:layout_below="@+id/tv_animanga_title_value"
            android:text="@string/animanga_type"
            android:layout_marginTop="8dp"/>

        <TextView
            style="@style/TvFavoriteSideValue"
            android:id="@+id/tv_animanga_type_value"
            android:layout_below="@+id/tv_animanga_type_text"
            android:text="@string/animanga_type_value"/>

        <TextView
            style="@style/TvFavoriteSideTitle"
            android:id="@+id/tv_animanga_aired_text"
            android:layout_below="@+id/tv_animanga_type_value"
            android:text="@string/animanga_aired"
            android:layout_marginTop="8dp"/>

        <TextView
            style="@style/TvFavoriteSideValue"
            android:id="@+id/tv_animanga_aired_value"
            android:layout_below="@+id/tv_animanga_aired_text"
            android:text="@string/animanga_aired_value"/>

        <TextView
            style="@style/TvFavoriteSideTitle"
            android:id="@+id/tv_animanga_genres_text"
            android:layout_below="@+id/tv_animanga_aired_value"
            android:text="@string/animanga_genres"
            android:layout_marginTop="8dp"/>

        <TextView
            style="@style/TvFavoriteSideValue"
            android:id="@+id/tv_animanga_genres_value"
            android:layout_below="@+id/tv_animanga_genres_text"
            android:text="@string/animanga_genres_value"/>

        <TextView
            android:id="@+id/tv_animanga_rating_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_poster"
            android:text="@string/animanga_rating"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/tv_animanga_rating_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_animanga_rating_title"
            android:text="@string/animanga_rating_value"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_alignLeft="@id/tv_animanga_rating_title"
            android:layout_alignRight="@id/tv_animanga_rating_title"/>

        <TextView
            android:id="@+id/tv_animanga_ranked_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_poster"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/tv_animanga_rating_title"
            android:text="@string/animanga_ranked"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"/>

        <TextView
            android:id="@+id/tv_animanga_ranked_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_animanga_rating_title"
            android:layout_toRightOf="@id/tv_animanga_rating_value"
            android:text="@string/animanga_ranked_value"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_alignLeft="@id/tv_animanga_ranked_title"
            android:layout_alignRight="@id/tv_animanga_ranked_title"/>

        <TextView
            android:id="@+id/tv_animanga_popularity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_poster"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/tv_animanga_ranked_title"
            android:text="@string/animanga_popularity"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"/>

        <TextView
            android:id="@+id/tv_animanga_popularity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_animanga_popularity_title"
            android:layout_toRightOf="@id/tv_animanga_ranked_value"
            android:text="@string/animanga_ranked_value"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_alignLeft="@id/tv_animanga_popularity_title"
            android:layout_alignRight="@id/tv_animanga_popularity_title"/>

        <TextView
            android:id="@+id/tv_animanga_members_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_poster"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/tv_animanga_popularity_title"
            android:text="@string/animanga_members"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"/>

        <TextView
            android:id="@+id/tv_animanga_members_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_animanga_members_title"
            android:layout_toRightOf="@id/tv_animanga_popularity_value"
            android:text="@string/animanga_members_value"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_alignLeft="@id/tv_animanga_members_title"
            android:layout_alignRight="@id/tv_animanga_members_title"/>

    </RelativeLayout>

</RelativeLayout>
