<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_news_detail"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            tools:src="@color/colorAccent"/>

        <TextView
            android:id="@+id/tv_news_title"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/img_news_detail"
            android:gravity="center"
            android:text="@string/news_detail_title"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:lineSpacingMultiplier="1"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="50dp"/>

        <TextView
            android:id="@+id/tv_news_source"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/tv_news_title"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/news_source"
            android:fontFamily="sans-serif-medium"/>

        <TextView
            android:id="@+id/tv_news_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_news_source"
            android:gravity="center"
            android:text="@string/news_author"
            android:fontFamily="sans-serif-light"/>

        <TextView
            android:id="@+id/tv_news_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_news_author"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/news_content"
            android:textSize="18sp"
            android:lineSpacingMultiplier="1.2"/>

    </RelativeLayout>
</ScrollView>